// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationEventMeta is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiBadge euiNotificationEventMeta__badge emotion-euiBadge-hollow"
      title="Alert"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiNotificationEventMeta__time"
    >
      <span>
        2 min ago
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props badgeColor  is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiBadge euiNotificationEventMeta__badge emotion-euiBadge-success"
      title="Alert"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiNotificationEventMeta__time"
    >
      <span>
        2 min ago
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props contextMenuItems are rendered 1`] = `
<div
  class="euiContextMenuPanel emotion-euiContextMenuPanel"
  tabindex="-1"
>
  <div>
    <div
      class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
    >
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        Mark as read
      </span>
    </div>
    <div
      class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
    >
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        View messages like this
      </span>
    </div>
    <div
      class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
    >
      <span
        class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
      >
        Don’t notify me about this
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props logoCloud  is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      aria-hidden="true"
      class="euiNotificationEventMeta__icon"
      data-euiicon-type="logoCloud"
    />
    <span
      class="euiBadge euiNotificationEventMeta__badge emotion-euiBadge-hollow"
      title="Alert"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiNotificationEventMeta__time"
    >
      <span>
        2 min ago
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props severity is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiBadge euiNotificationEventMeta__badge emotion-euiBadge-hollow"
      title="Alert: severity"
    >
      <span
        class="euiBadge__content emotion-euiBadge__content"
      >
        <span
          class="euiBadge__text emotion-euiBadge__text"
        >
          Alert: severity
        </span>
      </span>
    </span>
  </div>
  <div
    class="euiNotificationEventMeta__section"
  >
    <span
      class="euiNotificationEventMeta__time"
    >
      <span>
        2 min ago
      </span>
    </span>
  </div>
</div>
`;
